# raylib-template

./: .gitignore  CMakeLists.txt  CmakeLists.txt
.github/workflows/: build.yml
src/: main.c
